[UPDATE] aligned article and feature list

--- a/index.html
+++ b/index.html
@@ -7,7 +7,34 @@
 	<title>Document</title>
 	<style>
 		/* Your styles here! */
+		.main {
+			display: grid;
+			grid-template-columns: 1fr 1fr;
+			grid-gap: 2em;
+		}
 		
+		article {
+		
+			display: flex;
+			justify-content: center ;
+			background-color: rgb(100, 256, 210);
+			padding: 1rem;
+			column-gap: 15px;
+			max-width: 500px;
+		} 
+
+		.image {
+			width: 300px;
+			height: 300px;
+		}
+
+		.features-list { 
+			display: flex;
+			justify-content: flex-end;
+			
+		}
+		
+
 	</style>
 </head>
 <body>
