--- a/index.html
+++ b/index.html
@@ -24,16 +24,37 @@
 		} 
 
 		.image {
-			width: 300px;
-			height: 300px;
+			width: 200px;
+			height: 200px;
 		}
 
 		.features-list { 
 			display: flex;
 			justify-content: flex-end;
+
+		}
+
+		.features-list div {
+			background-color:bisque;
 			
+
+		
 		}
 		
+		@media only sreen and (max-width: 500px) {
+			.main {
+				display: grid;
+				grid-template-columns: 1fr;
+				grid-gap: 1rem;
+
+			}
+			article {
+				flex-direction: column;
+				max-width: 400px;
+			}
+		}
+
+
 
 	</style>
 </head>
