--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
 		}
 
 		.features-list div {
-			background-color:bisque;
-			
-
+			background-color:rgb(246, 237, 226);
+			margin: 5px;
+			padding: 10px;
+			border-radius: 6px;
 		
 		}
 		
@@ -45,12 +46,18 @@
 			.main {
 				display: grid;
 				grid-template-columns: 1fr;
-				grid-gap: 1rem;
+				grid-gap: 2rem;
 
 			}
 			article {
 				flex-direction: column;
 				max-width: 400px;
+			}
+
+			.image {
+				width: 100%;
+				height: 400px;
+				object-fit: cover;
 			}
 		}
 
