--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		article {
 		
 			display: flex;
+			grid-template-rows: auto 1fr;
 			justify-content: center ;
 			background-color: rgb(100, 256, 210);
 			padding: 1rem;
@@ -42,25 +43,37 @@
 		
 		}
 		
-		@media only sreen and (max-width: 500px) {
-			.main {
-				display: grid;
-				grid-template-columns: 1fr;
-				grid-gap: 2rem;
-
-			}
+		@media only screen and (max-width: 500px) {
 			article {
-				flex-direction: column;
-				max-width: 400px;
-			}
+				
+				display: grid;
+				grid-template-rows:1fr;
+				justify-content: center ;
+				background-color: rgb(100, 256, 210);
+				padding: 1rem;
+				column-gap: 15px;
+				max-width: 500px;
+			} 
 
 			.image {
 				width: 100%;
-				height: 400px;
-				object-fit: cover;
+				height: auto;
+			}
+
+			.features-list { 
+				display: flex;
+				justify-content: flex-end;
+
+			}
+
+			.features-list div {
+				background-color:rgb(246, 237, 226);
+				margin: 5px;
+				padding: 10px;
+				border-radius: 6px;
+			
 			}
 		}
-
 
 
 	</style>
