[UPDATE] responsive @ 500px with 2 columns not 1

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			article {
 				
 				display: grid;
-				grid-template-rows:1fr;
+				grid-template-rows: auto,1fr;
 				justify-content: center ;
 				background-color: rgb(100, 256, 210);
 				padding: 1rem;
@@ -56,6 +56,9 @@
 			} 
 
 			.image {
+				display: grid;
+				grid-template-columns:1fr;
+				justify-content: center ;
 				width: 100%;
 				height: auto;
 			}
